[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "calories"
path = "src/calories.rs"

[[bin]]
name = "rps"
path = "src/rps.rs"

[[bin]]
name = "rucksack"
path = "src/rucksack.rs"

[[bin]]
name = "cleaning"
path = "src/cleaning.rs"