[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

#[toolchain]
#channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "calories"
path = "src/calories.rs"

[[bin]]
name = "rps"
path = "src/rps.rs"

[[bin]]
name = "rucksack"
path = "src/rucksack.rs"

[[bin]]
name = "cleaning"
path = "src/cleaning.rs"

[[bin]]
name = "moves"
path = "src/moves.rs"

[[bin]]
name = "commands"
path = "src/commands.rs"

[[bin]]
name = "signal"
path = "src/signal.rs"

[[bin]]
name = "trees"
path = "src/trees.rs"

[[bin]]
name = "rope"
path = "src/rope.rs"

[[bin]]
name = "cpu"
path = "src/cpu.rs"

[[bin]]
name = "monkeys"
path = "src/monkeys.rs"

[[bin]]
name = "map"
path = "src/map.rs"

[[bin]]
name = "emergency"
path = "src/emergency.rs"

[[bin]]
name = "valve"
path = "src/valve.rs"

[[bin]]
name = "encrypted"
path = "src/encrypted.rs"

[[bin]]
name = "monkey_math"
path = "src/monkey_math.rs"